retrieveUnpackaged/objects/Designation__c.object
<CustomObject>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Channel Islands</fullName>
                </value>
                <value>
                    <fullName>Cochise</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Gila</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Maricopa</fullName>
                </value>
                <value>
                    <fullName>Marin, Napa</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yuma County PM10 Nonattainment Area</fullName>
                </value>
                <value>
                    <fullName>West Pinal</fullName>
                </value>
                <value>
                    <fullName>West Mojave Desert</fullName>
                </value>
                <value>
                    <fullName>Tuscan Buttes</fullName>
                </value>
                <value>
                    <fullName>Tucson</fullName>
                </value>
                <value>
                    <fullName>Trona planning area</fullName>
                </value>
                <value>
                    <fullName>Sutter Buttes</fullName>
                </value>
                <value>
                    <fullName>Southeast Desert Air Basin</fullName>
                </value>
                <value>
                    <fullName>South Coast Air Basin</fullName>
                </value>
                <value>
                    <fullName>South Central Coast Air Basin</fullName>
                </value>
                <value>
                    <fullName>San Manuel</fullName>
                </value>
                <value>
                    <fullName>San Luis Obispo</fullName>
                </value>
                <value>
                    <fullName>San Joaquin Valley Air Basin</fullName>
                </value>
                <value>
                    <fullName>San Francisco Bay Area</fullName>
                </value>
                <value>
                    <fullName>San Diego Air Basin</fullName>
                </value>
                <value>
                    <fullName>Salinas Valley-El Pomar Estrella Planning Area</fullName>
                </value>
                <value>
                    <fullName>Sacramento Valley Air Basin</fullName>
                </value>
                <value>
                    <fullName>Sacramento Metro</fullName>
                </value>
                <value>
                    <fullName>Rillito</fullName>
                </value>
                <value>
                    <fullName>Reno planning area</fullName>
                </value>
                <value>
                    <fullName>Phoenix-Mesa</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Pechanga Band of Luiseno Mission Indians</fullName>
                </value>
                <value>
                    <fullName>Payson</fullName>
                </value>
                <value>
                    <fullName>Paul Spur/Douglas</fullName>
                </value>
                <value>
                    <fullName>Paul Spur</fullName>
                </value>
                <value>
                    <fullName>Page</fullName>
                </value>
                <value>
                    <fullName>Owens Valley planning area</fullName>
                </value>
                <value>
                    <fullName>Northeast PLateau Air Basin</fullName>
                </value>
                <value>
                    <fullName>North Coast Air Basin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Pacific Islands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Designation</label>
    <nameField>
        <label>Designation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Designation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>